#57 : validation v1.1.2 de la trousse

--- a/public/index.html
+++ b/public/index.html
@@ -97,15 +97,6 @@
                 </div>
             </div>
 
-            <h3>Couleurs d’accent</h3>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-accent"></div>
-                <div class="color-description">
-                    <strong>Rose</strong><br/>
-                    <code  >--qc-color-accent</code>
-                </div>
-            </div>
-
             <h3>Niveaux de gris</h3>
             <div class="color-details">
                 <div class="color-sample qc-bg-color-grey-pale"></div>
@@ -136,10 +127,10 @@
                 </div>
             </div>
             <div class="color-details">
-                <div class="color-sample qc-bg-color-green-dark"></div>
+                <div class="color-sample qc-bg-color-grey-dark"></div>
                 <div class="color-description">
                     <strong>Gris foncé</strong><br/>
-                    <code  >--qc-color-green-dark</code>
+                    <code  >--qc-color-grey-dark</code>
                 </div>
             </div>
 
@@ -153,10 +144,10 @@
                 </div>
             </div>
             <div class="color-details">
-                <div class="color-sample qc-bg-color-pink-regular"></div>
+                <div class="color-sample qc-bg-color-pink-regular qc-bg-color-accent"></div>
                 <div class="color-description">
                     <strong>Rose</strong><br/>
-                    <code  >--qc-color-pink-regular</code>
+                    <code  >--qc-color-pink-regular, --qc-color-accent</code>
                 </div>
             </div>
             <div class="color-details">
