--- a/public/index.html
+++ b/public/index.html
@@ -637,9 +637,9 @@
                 </tbody>
             </table>
 
-            <h4>Emplacement d'insertion de contenu</h4>
+            <h4>Insertions de contenu ciblées</h4>
 
-            <p>Ci-dessous en encadré, l'emplacement disponibles pour insérer du contenu dans le composant.</p>
+            <p>Ci-dessous en encadré, l'emplacement disponible pour insérer du contenu dans le composant.</p>
 
             <qc-notice id="qc-notice-slots">
                 <div style="border:1px solid; padding: var(--qc-spacer-xs);">
@@ -704,7 +704,7 @@
                 </tr>
             </table>
 
-            <h4>Emplacement d'insertion de contenu</h4>
+            <h4>Insertions de contenu ciblées</h4>
 
             <p>Ci-dessous en encadré, l'emplacement disponible pour insérer du contenu dans le composant.</p>
 
@@ -749,7 +749,7 @@
             </qc-piv-footer>
             <qc-code target-id="piv-footer-2"></qc-code>
 
-            <p>Avec des insertion de contenu :</p>
+            <p>Avec des insertions de contenu :</p>
             <qc-piv-footer id="piv-footer-3">
                 <ul>
                     <li><a href="/">Accessibilité</a></li>
@@ -842,7 +842,7 @@
                 </thead>
             </table>
 
-            <h4>Emplacements d'insertion de contenu</h4>
+            <h4>Insertions de contenu ciblées</h4>
 
             <p>Ci-dessous en encadré, les emplacements disponibles pour insérer du contenu dans le composant.</p>
 
@@ -1016,7 +1016,7 @@
                 </thead>
             </table>
 
-            <h4>Emplacements d'insertion de contenu</h4>
+            <h4>Insertions de contenu ciblées</h4>
 
             <p>Ci-dessous en encadré, les emplacements disponibles pour insérer du contenu dans le composant.</p>
 
