Ajout de menus dans la doc incluse + refacto mise en forme.

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,12 @@
                     <li><a href='#table'>Tables</a></li>
                     <li><a href='#notice'>Composant "Avis"</a></li>
                     <li><a href='#alert'>Composant "Alerte générale"</a></li>
-                    <li><a href='#piv'>Composant "PIV"</a></li>
+                    <li><a href='#piv'>Composants "PIV"</a>
+                        <ul>
+                            <li><a href='#piv-footer'>Pied-de-page PIV</a>
+                            <li><a href='#piv-header'>Bandeau PIV</a>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -718,7 +723,7 @@
             <!-- PIV -->
             <h2 id="piv">PIV</h2>
 
-            <h3>Pied de page (qc-piv-footer)</h3>
+            <h3 id="piv-footer">Pied de page (qc-piv-footer)</h3>
             <h4>Exemples</h4>
             <p>Exemple minimaliste.</p>
             <qc-piv-footer id="piv-footer-1">
@@ -858,7 +863,7 @@
             </qc-piv-footer>
             <qc-code target-id="qc-piv-footer-slots"></qc-code>
 
-            <h3>Bandeau (qc-piv-header)</h3>
+            <h3 id="piv-header">Bandeau (qc-piv-header)</h3>
 
             <h4>Exemples</h4>
             <p>Exemple minimaliste</p>
