fix dans la doc incluse

--- a/public/index.html
+++ b/public/index.html
@@ -911,7 +911,7 @@
                 <form slot="search-zone"
                       method="get"
                       id="custom-piv-search-form"
-                      action="https:/www.google.ca/search"
+                      action="https://www.google.ca/search"
                 >
                     <input type="hidden"
                            name="custom-field"
