bandeau PIV - Modification du bouton pour permutter la recherche (au lieu de l'afficher uniquement) + mettre le focus sur le champ recherche

--- a/public/index.html
+++ b/public/index.html
@@ -1055,8 +1055,14 @@
                     <tr>
                         <td>display-search-text</td>
                         <td>Texte</td>
-                        <td>Cliquer pour rechercher / Click to search</td>
-                        <td>Texte du bouton de recherche pour les lecteurs d'écran.</td>
+                        <td>Cliquer pour faire une recherche / Click to search</td>
+                        <td>Texte du bouton de recherche pour les lecteurs d'écran pour masquer la barre de recherche.</td>
+                    </tr>
+                    <tr>
+                        <td>hide-search-text</td>
+                        <td>Texte</td>
+                        <td>Masquer la barre de recherche / Hide search bar</td>
+                        <td>Texte du bouton de recherche pour les lecteurs d'écran pour masquer la barre de recherche.</td>
                     </tr>
                     <tr>
                         <td>submit-search-text</td>
