--- a/public/index.html
+++ b/public/index.html
@@ -571,13 +571,8 @@
 
             <qc-notice id="notice-success"
                        type="success"
-                       title="Chuck Norris a été élu être humain le plus extraordinaire de tous les temps.">
-                <p>Certains faits importants à savoir à propos de Chuck Norris :</p>
-                <ul>
-                    <li>Un jour Chuck Norris a eu un zero en latin, depuis c'est une langue morte ;</li>
-                    <li>Chuck Norris a déjà compté jusqu'à l'infini. Deux fois ;</li>
-                    <li>C'est Chuck Norris qui a décidé que toute phrase se terminait par un poing.</li>
-                </ul>
+                       title="Votre demande d'inscription a été reçue"
+                       content="Votre code de confirmation sera envoyé par courriel.">
             </qc-notice>
 
             <qc-code target-id="notice-success"></qc-code>
