Correction d'une erreur de texte dans la doc

--- a/public/index.html
+++ b/public/index.html
@@ -1112,7 +1112,7 @@
             <!-- haut de page -->
             <h2 id="toTop">Haut de page</h2>
             <p>
-                Le composant haut de page est la flèche qui permet l'utilisateur de remonter vers le haut de page. Il s'affiche quand l'utilisateur commence à défiler vers le haut.
+                Le composant haut de page est la flèche qui permet à l'utilisateur de remonter vers le haut de page. Il s'affiche quand l'utilisateur commence à défiler vers le haut.
                 Il disparaît quand l'utilisateur commence à défiler vers le bas.
             </p>
             <h4>Exemple</h4>
