Renommage du catalogue en doc

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet"
           href="css/qc-sdg.css">
     <link rel="stylesheet"
-          href="css/qc-catalog-sdg.css">
+          href="css/qc-doc-sdg.css">
     <title>Documentation technique du Système de design gouvernemental</title>
     <script defer
             src='js/qc-sdg.js'
             sdg-css-filename="qc-sdg.css">
     </script>
     <script defer
-            src='js/qc-catalog-sdg.js'
-            sdg-css-filename="qc-catalog-sdg.css">
+            src='js/qc-doc-sdg.js'
+            sdg-css-filename="qc-doc-sdg.css">
     </script>
 </head>
 <body>
