Mise à jour des titres de la doc incluse

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
 <body>
     <header>
         <qc-piv-header id="pivEntete"
-                       title-text="Documentation technique du Système de design gouvernemental"
+                       title-text="Trousse de développement du Système de design gouvernemental"
                        alt-logo="Signature du gouvernement du Québec. Accédez au Système de design gouvernemental.">
         </qc-piv-header>
 
         <div class="qc-container">
             <h1>
                 <span class="qc-subhead"id="version"></span>
-                Trousse du Système de design gouvernemental
+                Documentation technique
             </h1>
             <div class="main-menu">
                 <p class="qc-h4">Bases</p>
