Squelette des liens blocs

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
                 </ul>
                 <p class="qc-h4">Composants</p>
                 <ul>
+                    <!-- ajouter le menu liens blocs -->
                     <li><a href='#alert'>Alerte générale</a></li>
                     <li><a href='#notice'>Avis</a></li>
                     <li><a href='#piv'>Composants du PIV</a>
@@ -543,6 +544,7 @@
             </div>
 
 <hr />
+            <!-- ajouter la doc liens blocs. Prendre exemple sur l'existant -->
 
             <!-- alerte générale -->
             <h2 id="alert">Alerte générale (qc-alert)</h2>
