Ajout du composant séparateur.

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
                 </ul>
                 <p class="qc-h4">Composants</p>
                 <ul>
+                    <li><a href='#separator'>Séparateur</a></li>
                     <li><a href='#alert'>Alerte générale</a></li>
                     <li><a href='#notice'>Avis</a></li>
                     <li><a href='#piv'>Composants du PIV</a>
@@ -543,6 +544,16 @@
             </div>
 
 <hr />
+            <!-- Séparateur -->
+            <h2 id="separator">Séparateur</h2>
+
+            <div id="separateur-exemple">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <hr />
+                <p>A autem consequuntur cum cupiditate dignissimos, dolore doloribus,</p>
+            </div>
+
+            <qc-code target-id="separateur-exemple"></qc-code>
 
             <!-- alerte générale -->
             <h2 id="alert">Alerte générale (qc-alert)</h2>
