Adding the Separator Style.

--- a/public/index.html
+++ b/public/index.html
@@ -547,11 +547,13 @@
             <!-- Séparateur -->
             <h2 id="separator">Séparateur</h2>
 
-            <p id="separateur-exemple">
-                <p>lorem ipsum dolor sit amet</p>
-                <hr />
-                <p>lorem ipsum dolor sit amet</p>
+            <p id="separateur-exemple" class="separator">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                A autem consequuntur cum cupiditate dignissimos, dolore doloribus,
+                fuga inventore natus necessitatibus nesciunt non numquam officia
+                quas repellendus sint unde, vel veritatis.
             </p>
+
             <qc-code target-id="separateur-exemple"></qc-code>
 
             <!-- alerte générale -->
