Adding the Separator's Style.

--- a/public/index.html
+++ b/public/index.html
@@ -547,12 +547,13 @@
             <!-- Séparateur -->
             <h2 id="separator">Séparateur</h2>
 
-            <p id="separateur-exemple" class="separator">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                A autem consequuntur cum cupiditate dignissimos, dolore doloribus,
-                fuga inventore natus necessitatibus nesciunt non numquam officia
-                quas repellendus sint unde, vel veritatis.
-            </p>
+            <div id="separateur-exemple">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <hr />
+                <p>A autem consequuntur cum cupiditate dignissimos, dolore doloribus,</p>
+                <div class="separator"></div>
+                <p>A autem consequuntur cum cupiditate dignissimos, dolore doloribus,</p>
+            </div>
 
             <qc-code target-id="separateur-exemple"></qc-code>
 
